force-app/main/default/objects/vlocity_ins__CampaignMemberActionLog__c/vlocity_ins__CampaignMemberActionLog__c.object-meta.xml
<CustomObject>
    <description>Represents an action taken against a campaign member such as an attempt to call the member.</description>
    <label>Campaign Member Action Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Action Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Action Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>