force-app/main/default/objects/vlocity_ins__CampaignMemberActionLog__c/fields/vlocity_ins__ActionType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ActionType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>