force-app/main/default/objects/vlocity_ins__CampaignMemberActionLog__c/fields/vlocity_ins__CallTimeDisplay__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CallTimeDisplay__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>