force-app/main/default/objects/vlocity_ins__CampaignMemberActionLog__c/fields/vlocity_ins__CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CampaignMemberId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>